[package]
name = "Tio_Server"
version = "0.1.0"
edition = "2024"
default-run = "Tio_Server"
description = "Tio, raspberry pi zero 2 w da çalışacak kodlar"
license = "MIT"
repository = "https://github.com/cengizkarakaya/t01_server"
homepage = "https://github.com/cengizkarakaya/t01_server"
keywords = ["rust", "Tio_Server", "Tio", "cli"]
categories = ["Tio_Server"]
authors = ["Cengiz Karakaya <cengizkarakaya@hotmail.com>"]
rust-version = "1.96"

[workspace]
members = ["lib"]

[dependencies]
terminal_colors = { path = "lib" }
